AUTOMAKE_OPTIONS = foreign subdir-objects

bin_PROGRAMS =
lib_LTLIBRARIES =
pkgconfig_DATA =

AM_CPPFLAGS =
AM_CPPFLAGS += -I $(top_srcdir)/include
EXTRA_DIST =

include $(srcdir)/Documentation/automake.mk
include $(srcdir)/flow-table-ctl/automake.mk
include $(srcdir)/include/automake.mk
include $(srcdir)/lib/automake.mk
